<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemUser"
            type="com.demo.task.submissiontwodicoding.models.Item" />

        <variable
            name="clickListener"
            type="com.demo.task.submissiontwodicoding.adapter.UserSearchListener" />
    </data>

    <androidx.cardview.widget.CardView style="@style/CardViewStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()-> clickListener.onClickListener(itemUser)}"
            android:padding="@dimen/full_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civUser"
                style="@style/CircleImageStyleSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:userAvatar="@{itemUser.avatar_url}"
                tools:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tvUsername"
                style="@style/TextViewBig"
                android:layout_marginStart="8dp"
                app:setTextData="@{itemUser.login}"
                app:layout_constraintBottom_toTopOf="@+id/tvLinkUrl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/civUser"
                app:layout_constraintTop_toTopOf="@+id/civUser"
                tools:text="@string/tools_username" />

            <TextView
                android:id="@+id/tvLinkUrl"
                style="@style/TextViewMedium"
                android:ellipsize="end"
                android:maxLines="1"
                app:setTextData="@{itemUser.html_url}"
                app:layout_constraintBottom_toTopOf="@+id/tvIDUser"
                app:layout_constraintEnd_toEndOf="@+id/tvUsername"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvUsername"
                tools:text="@string/tools_web" />

            <TextView
                android:id="@+id/tvIDUser"
                style="@style/TextViewSmall"
                android:layout_marginBottom="8dp"
                app:setTextData="@{@string/iduser(itemUser.id)}"
                app:layout_constraintBottom_toBottomOf="@+id/civUser"
                app:layout_constraintEnd_toEndOf="@+id/tvLinkUrl"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvLinkUrl"
                tools:text="@string/tools_idUser" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>