<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailUser"
            type="com.demo.task.submissiontwodicoding.models.DetailUser" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civUser"
            style="@style/CircleImageStyleSmall"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:userAvatar="@{detailUser.avatar_url}"
            tools:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextViewBig.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/civUser"
            app:setTextData="@{detailUser.login}"
            tools:text="Jake Wharton" />

        <TextView
            android:id="@+id/tvRepository"
            style="@style/TextViewMedium.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_folder_repo"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation"
            app:setTextData="@{@plurals/repositoryNumber(detailUser.public_repos > 1f ?2:1, detailUser.public_repos)}"
            tools:text="@string/tools_repository" />

        <TextView
            android:id="@+id/tvLocation"
            style="@style/TextViewMedium.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_location"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvCompany"
            app:layout_constraintTop_toBottomOf="@+id/tvBlog"
            app:setTextData="@{detailUser.location}"
            tools:text="@string/tools_location" />

        <TextView
            android:id="@+id/tvCompany"
            style="@style/TextViewMedium.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:drawableStart="@drawable/ic_location_city"
            android:gravity="center|end"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/tvLocation"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBlog"
            app:setTextData="@{detailUser.company}"
            tools:text="@string/tools_company" />

        <TextView
            android:id="@+id/tvBlog"
            style="@style/TextViewMedium.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:setTextData="@{detailUser.html_url}"
            tools:text="@string/tools_exp_web" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>